--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -1,4 +1,4 @@
-name: Build and push docker image
+name: Build and push image to docker hub
 
 on:
   push:
@@ -8,17 +8,14 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-
       - name: Log in to docker hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Get docker tags
         id: meta
         uses: docker/metadata-action@v5
@@ -27,8 +24,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest,enable=true
-
-      - name: Build and push docker image
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: .
